# cap_vision

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
include/core/: face_detector.hpp
include/ui/: face_visualizer.hpp  main_window.hpp  mesh.hpp  model3d.hpp  opengl_widget.hpp  shader.hpp  video_widget.hpp
src/: main.cpp
src/core/: face_detector.cpp
src/ui/: face_visualizer.cpp  main_window.cpp  mesh.cpp  model3d.cpp  opengl_widget.cpp  shader.cpp  video_widget.cpp
